--- a/index.html
+++ b/index.html
@@ -7,41 +7,60 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   
   <title>Frontend Mentor | Results summary component</title>
+  
+  <!--Google Fonts-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk:wght@500;700;800&display=swap" rel="stylesheet">
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+<!--Meu CSS-->
+  <link rel="stylesheet" href="styles.css">
+
 </head>
 <body>
+  <main>
 
-  Your Result
-  76
-  of 100
+    <article class="results-card">
+      <div class="results-card-header">
+        <h1 class="your-result">Your Result</h1>
 
-  Great
-  You scored higher than 65% of the people who have taken these tests.
-  
-  Summary
+        <div class="results-circle">
+          <h2 class="results-circle-top-number">76</h2>
+          <p class="results-circle-bottom-number">of 100</p>
+        </div>
 
-  Reaction
-  80 / 100
+        <div class="result-status">
+          <h2 class="results-status-word">Great</h2>
+          <p class="results-status-text">You scored higher than 65% of the people who have taken these tests.</p>
+        </div>
+      </div>
+    
+      <div class="results-card-summary">
+        <h2 class="sumarry-heading">Summary</h2>
 
-  Memory
-  92 / 100
+        <div class="bar bar-reaction">
+          Reaction
+          80 / 100
+        </div>
 
-  Verbal
-  61 / 100
+        <div class="bar bar-memory">
+          Memory
+          92 / 100
+        </div>
 
-  Visual
-  72 / 100
+        <div class="bar bar-verbal">
+          Verbal
+          61 / 100
+        </div>
 
-  Continue
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+        <div class="bar bar-visual">
+          Visual
+          72 / 100
+        </div>
+
+        <button class="btn">Continue</button>
+    </div>
+    </article>
+  </main>
 </body>
 </html>
