--- a/index.html
+++ b/index.html
@@ -38,24 +38,67 @@
       <div class="results-card-summary">
         <h2 class="sumarry-heading">Summary</h2>
 
+
         <div class="bar bar-reaction">
-          Reaction
-          80 / 100
+
+            <div class="bar-align">
+
+              <div class="bar-text-align">
+                <img src="./assets/images/icon-reaction.svg">
+                <p style="color: hsl(0, 100%, 67%)">Reaction</p>
+              </div>
+
+              <div class="bar-text-align">
+                <p>80ㅤ</p><p style="opacity: 0.5;">/ 100</p>
+              </div>
+
+            </div>
+
         </div>
 
+
         <div class="bar bar-memory">
-          Memory
-          92 / 100
+          <div class="bar-align">
+            <div class="bar-text-align">
+              <img src="./assets/images/icon-memory.svg">
+              <p style="color: hsl(39, 100%, 56%);">Memory</p>
+            </div>
+
+            <div class="bar-text-align">
+              <p>92ㅤ</p><p style="opacity: 0.5;">/ 100</p>
+            </div>
+
+          </div>
         </div>
 
         <div class="bar bar-verbal">
-          Verbal
-          61 / 100
+          <div class="bar-align">
+
+            <div class="bar-text-align">
+              <img src="./assets/images/icon-verbal.svg" alt="" srcset="">
+              <p style="color: hsl(166, 100%, 37%);">Verbal</p>
+            </div>
+
+            <div class="bar-text-align">
+              <p>61ㅤ</p><p style="opacity: 0.5;">/ 100</p>
+            </div>
+
+          </div>
         </div>
 
         <div class="bar bar-visual">
-          Visual
-          72 / 100
+          <div class="bar-align">
+
+            <div class="bar-text-align">
+              <img src="./assets/images/icon-visual.svg" alt="" srcset="">
+              <p style="color: hsl(234, 85%, 45%)">Visual</p>
+            </div>
+
+            <div class="bar-text-align">
+              <p>72ㅤ</p><p style="opacity: 0.5;">/ 100</p>
+            </div>
+
+          </div>
         </div>
 
         <button class="btn">Continue</button>
