Added Mobile Layout

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <!--Google Fonts-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk:wght@500;700;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk:wght@300;400;500;700;800&display=swap" rel="stylesheet">
 
-<!--Meu CSS-->
+  <!--Meu CSS-->
   <link rel="stylesheet" href="styles.css">
 
 </head>
@@ -23,13 +23,14 @@
     <article class="results-card">
       <div class="results-card-header">
         <h1 class="your-result">Your Result</h1>
+   
 
         <div class="results-circle">
           <h2 class="results-circle-top-number">76</h2>
           <p class="results-circle-bottom-number">of 100</p>
         </div>
 
-        <div class="result-status">
+        <div class="results-status">
           <h2 class="results-status-word">Great</h2>
           <p class="results-status-text">You scored higher than 65% of the people who have taken these tests.</p>
         </div>
@@ -49,7 +50,7 @@
               </div>
 
               <div class="bar-text-align">
-                <p>80ㅤ</p><p style="opacity: 0.5;">/ 100</p>
+                <p>80</p><p style="opacity: 0.5;">/ 100</p>
               </div>
 
             </div>
@@ -65,7 +66,7 @@
             </div>
 
             <div class="bar-text-align">
-              <p>92ㅤ</p><p style="opacity: 0.5;">/ 100</p>
+              <p>92</p><p style="opacity: 0.5;">/ 100</p>
             </div>
 
           </div>
@@ -80,7 +81,7 @@
             </div>
 
             <div class="bar-text-align">
-              <p>61ㅤ</p><p style="opacity: 0.5;">/ 100</p>
+              <p>61</p><p style="opacity: 0.5;">/ 100</p>
             </div>
 
           </div>
@@ -95,7 +96,7 @@
             </div>
 
             <div class="bar-text-align">
-              <p>72ㅤ</p><p style="opacity: 0.5;">/ 100</p>
+              <p>72</p><p style="opacity: 0.5;">/ 100</p>
             </div>
 
           </div>
